--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <gsonVersion>2.10</gsonVersion>
         <extentReport>5.0.9</extentReport>
         <datafakerversion>2.0.1</datafakerversion>
+        <javersVersion>7.3.2</javersVersion>
     </properties>
 
     <dependencies>
@@ -83,6 +84,13 @@
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
             <version>${extentReport}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.javers/javers-core -->
+        <dependency>
+            <groupId>org.javers</groupId>
+            <artifactId>javers-core</artifactId>
+            <version>${javersVersion}</version>
         </dependency>
 
 
